k8s/11-api-servive.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-api
  namespace: chess-trainer
spec:
  selector:
    app: chess-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
