k8s/21-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: chess-trainer
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
